--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,15 @@
 cmake_minimum_required(VERSION 3.16)
-project(SDL_Controller_Lib)
+project(SDL_RC_Controller)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-# Find SDL2
-find_package(SDL2 REQUIRED)
-
-# Qt for API
-find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui Quick Qml)
+set(CMAKE_AUTOMOC ON)
 
 # -----------------------------
 # Library: SDL_Controller_Lib
 # -----------------------------
-set(LIB_NAME "SDL_Controller_Lib")
+set(LIB_NAME "SDL_RC_Controller_Lib")
 add_library(${LIB_NAME} STATIC
     src/QmlControllerApi.cpp
     src/QmlControllerApi.h
@@ -24,9 +19,12 @@ add_library(${LIB_NAME} STATIC
 target_include_directories(${LIB_NAME} 
     PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include
 )
+# depecndencies
+find_package(SDL2 REQUIRED)
+find_package(Qt6 REQUIRED COMPONENTS Core Widgets Gui Quick Qml)
 
 # Link dependencies
-target_link_libraries(${LIB_NAME} 
+target_link_libraries(${LIB_NAME}
     PUBLIC SDL2::SDL2
     PUBLIC Qt6::Core
     PUBLIC Qt6::Widgets
@@ -37,10 +35,17 @@ target_link_libraries(${LIB_NAME}
 
 # QML module for library
 qt_add_qml_module(${LIB_NAME}
-    URI SDL-Controller
+    URI SDL_RC_Controller
     VERSION 1.0
-    QML_FILES qml/Main.qml
+    QML_FILES 
+        qml/Main.qml
+        qml/ChannelConfigurator_V2.qml
 )
+# -----------------------------
+# Include CRSF USB Host & SDL Controller libraries
+# -----------------------------
+add_subdirectory(CustomController)
+target_link_libraries(${LIB_NAME} PUBLIC CustomController)
 
 # -----------------------------
 # Executable: example app
@@ -49,9 +54,7 @@ qt_add_executable(${PROJECT_NAME}
     example/main.cpp
 )
 
-target_link_libraries(${PROJECT_NAME} 
-    PRIVATE ${LIB_NAME}
-)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LIB_NAME})
 
 # Qt policies
 qt_policy(SET QTP0004 NEW)
