FINALLY GOT ALL THE UI FUNCTIONALITY WORKING.
Now just to add the main function of this forsaken program

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(LIB_NAME "SDL_RC_Controller_Lib")
 add_library(${LIB_NAME} STATIC
     src/QmlControllerApi.cpp
     src/QmlControllerApi.h
+    src/ChannelConfig.h
+    src/JsonHelper.h
 )
 
 # Include directories
