--- a/CustomController/CMakeLists.txt
+++ b/CustomController/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
-project(CustomController)
+project(CustomControllerLib)
 
-# Needs SDL2 to work
 find_package(SDL2 REQUIRED)
 
 # Create library
@@ -9,9 +8,12 @@ add_library(${PROJECT_NAME} STATIC
     "src/inputController.cpp" 
     "src/behavior.cpp"
 )
+
+target_include_directories(${PROJECT_NAME} PUBLIC
+    "${CMAKE_CURRENT_SOURCE_DIR}/include"
+)
     
 # Link SDL2
-target_link_libraries(${PROJECT_NAME} PUBLIC SDL2::SDL2)
-
-# Include the header directory
-target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_link_libraries(${PROJECT_NAME} PUBLIC
+    SDL2::SDL2
+)
